--- a/projeto_lab/package.json
+++ b/projeto_lab/package.json
@@ -3,16 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass": "^4.13.0",
     "pokemon": "^2.0.1",
     "pokemon-gif": "^1.0.14",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-in-viewport": "^1.0.0-alpha.11",
+    "react-redux": "^7.1.3",
+    "react-redux-firebase": "^3.0.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-slick": "^0.25.2",
     "react-spring": "^8.0.27",
     "react-youtube": "^7.9.0",
-    "reactstrap": "^8.1.1"
+    "reactstrap": "^8.1.1",
+    "redux": "^4.0.4",
+    "redux-firestore": "^0.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
