--- a/projeto_lab/package.json
+++ b/projeto_lab/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^7.4.0",
     "node-sass": "^4.13.0",
     "pokemon": "^2.0.1",
     "pokemon-gif": "^1.0.14",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-in-viewport": "^1.0.0-alpha.11",
+    "react-lazyload": "^2.6.5",
     "react-redux": "^7.1.3",
     "react-redux-firebase": "^3.0.5",
     "react-router-dom": "^5.1.2",
@@ -18,7 +20,8 @@
     "react-youtube": "^7.9.0",
     "reactstrap": "^8.1.1",
     "redux": "^4.0.4",
-    "redux-firestore": "^0.10.0"
+    "redux-firestore": "^0.10.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
