--- a/projeto_lab/package.json
+++ b/projeto_lab/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.7.0",
     "firebase": "^7.4.0",
     "node-sass": "^4.13.0",
     "pokemon": "^2.0.1",
@@ -10,6 +11,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-in-viewport": "^1.0.0-alpha.11",
+    "react-infinite-scroll-component": "^5.0.3",
     "react-lazyload": "^2.6.5",
     "react-redux": "^7.1.3",
     "react-redux-firebase": "^3.0.5",
