--- a/projeto_lab/package.json
+++ b/projeto_lab/package.json
@@ -16,6 +16,7 @@
     "react-redux-firebase": "^3.0.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-select": "^3.0.8",
     "react-slick": "^0.25.2",
     "react-spring": "^8.0.27",
     "react-youtube": "^7.9.0",
