--- a/projeto_lab/package.json
+++ b/projeto_lab/package.json
@@ -23,6 +23,7 @@
     "reactstrap": "^8.1.1",
     "redux": "^4.0.4",
     "redux-firestore": "^0.10.0",
+    "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "svg-loaders-react": "^2.1.0"
