--- a/projeto_lab/package.json
+++ b/projeto_lab/package.json
@@ -12,12 +12,12 @@
     "react-dom": "^16.12.0",
     "react-infinite-scroll-component": "^5.0.4",
     "react-lazyload": "^2.6.5",
+    "react-multi-carousel": "^2.4.2",
     "react-redux": "^7.1.3",
     "react-redux-firebase": "^3.0.5",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.3.0",
     "react-select": "^3.0.8",
-    "react-slick": "^0.25.2",
     "react-spring": "^8.0.27",
     "react-youtube": "^7.9.0",
     "reactstrap": "^8.1.1",
